# randqa

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
src/: README.md  __init__.py  gui.py  main.py  web.py
src/advisor/: README.md  llm.py  rules.py
src/health/: README.md  apt.py  rct.py
src/metrics/: README.md  approx_entropy.py  block_frequency.py  compression.py  entropy.py  mono_bit.py  monobit.py  runs.py
src/ml/: README.md  predictor.py
src/sources/: README.md  lcg.py  os_random.py  xorshift.py
src/util/: README.md  config_help.py  fdr.py  report.py
tests/: README.md  test_bits_utils.py  test_block_frequency.py  test_entropy_compression.py  test_fdr.py  test_ml_predictor.py  test_mono_bit.py  test_monobit.py  test_runs.py
